<resources>
    <string name="app_name">AniQuiz</string>
    <string name="play_button">Play</string>
    <string name="review_button">Review</string>
    <string name="admin_button">Admin</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="review_header">Review Screen</string>
    <string name="question_label">Question</string>
    <string name="answer_label">Answer</string>
    <string name="explain_label">Explanation</string>
    <string name="exit_label">Exit</string>
    <string name="main_header">Land Reform and Taxation Reviewer</string>
    <string name="time">15</string>
    <string name="correct">Correct</string>
    <string name="wrongans">Oops the ans was wrong</string>
    <string name="timeup">Time Up</string>
    <string name="play_game">Play Game</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="cancel">✖</string>
    <string name="score">Your Total Score is:</string>
    <string name="option_d">Option D</string>
    <string name="passcode_text">Enter Admin Code</string>
    <string name="confirm_txt">Confirm!!!!</string>
    <string name="boy_name">Karl Roa </string>
    <string name="boy_email">Karl Roa </string>
    <string name="girl_name">Name: Rio R. Licaros</string>
    <string name="girl_email">Email: \n riolicaros23@gmail.com</string>
    <string name="todo">TODO</string>
    <string name="todos">TODO</string>
    <string name="timer">Timer</string>
    <string name="d">D</string>
    <string name="question">Question</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="you_re_correct">You\'re correct!</string>
    <string name="about">About</string>
    <string name="play_quiz">Play Quiz</string>
</resources>
