<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quiz_background"
    android:scaleType="fitCenter"
    tools:context=".PlayActivity">


    <TextView
        android:id="@+id/tvScore"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="110dp"

        android:background="@drawable/quiz_score"
        android:gravity="center"
        android:text="Score: 0"
        android:textColor="@color/bagongGray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/atma_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvqnum"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/quiz_score"
        android:gravity="center"
        android:text="Question: 1/10"
        android:textColor="@color/backgroundColor"
        android:textSize="18sp"
        app:fontFamily="@font/atma_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptionD" />

    <TextView
        android:id="@+id/button"
        android:layout_width="82dp"
        android:layout_height="79dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/quiz_backbutton"
        android:onClick="back"
        app:fontFamily="@font/atma_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvqnum"
        app:layout_constraintTop_toBottomOf="@+id/btnOptionD"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/btnOptionC"
        android:layout_width="wrap_content"
        android:layout_height="70dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/quiz_ans"
        android:gravity="center"
        android:inputType="textCapWords"
        android:onClick="clickOption3"
        android:text="@string/c"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/atma_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptionB"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/btnOptionB"
        android:layout_width="wrap_content"
        android:layout_height="70dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/quiz_ans"
        android:gravity="center"
        android:inputType="textCapWords"
        android:onClick="clickOption2"
        android:text="@string/b"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/atma_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptionA"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/btnOptionA"
        android:layout_width="wrap_content"
        android:layout_height="70dp"

        android:layout_marginTop="14dp"
        android:background="@drawable/quiz_ans"
        android:gravity="center"
        android:includeFontPadding="true"
        android:inputType="textCapWords"
        android:onClick="clickOption1"
        android:text="@string/a"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/atma_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion"
        tools:ignore="TextContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/quiz_question"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/atma_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScore" />

    <TextView
        android:id="@+id/btnOptionD"
        android:layout_width="wrap_content"
        android:layout_height="70dp"

        android:layout_marginTop="10dp"
        android:background="@drawable/quiz_ans"
        android:gravity="center"
        android:inputType="textCapWords"
        android:onClick="clickOption4"
        android:text="@string/d"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:fontFamily="@font/atma_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptionC" />

</androidx.constraintlayout.widget.ConstraintLayout>